--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Only log 4xx and 5xx responses (see nginx-logging.conf for $loggable map)
+    access_log /var/log/nginx/access.log combined if=$loggable;
+
     # Allow large payloads for log ingestion from Vector/Fluentd.
     # 50MB is sufficient - for high-volume ingestion (1TB+/day), tune the
     # shipper's batch settings (max_bytes, concurrency) rather than increasing
